--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -1,17 +1,28 @@
 .container {
-  padding: 20px;
+  padding: 80px 20px 20px 20px;
+  background-image: url(/bgmovies.jfif);
+  background-size: cover;
 }
 
 .title {
-  font-size: 36px;
+  font-size: 48px;
   font-weight: bold;
+
+  color: #ffffff;
 }
 
 .movies-list {
   display: flex;
   flex-direction: column;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
 
+  height: 450px;
   margin: 30px 0 0 30px;
+  padding: 20px;
 
-  line-height: 1.5;
+  line-height: 1.6;
+
+  border-radius: 20px;
+  background-color: rgba(64, 32, 0, 0.5);
 }
