--- a/src/pages/moviesPage/MoviesPage.module.css
+++ b/src/pages/moviesPage/MoviesPage.module.css
@@ -1,5 +1,7 @@
 .container {
-  padding: 20px;
+  padding: 80px 20px 20px 20px;
+  background-image: url(/bgmovies.jfif);
+  background-size: cover;
 }
 
 .input {
