--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -14,11 +14,10 @@
 .movies-list {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
 
   height: 450px;
-  margin: 30px 0 0 30px;
+  margin-top: 30px;
   padding: 20px;
 
   line-height: 1.6;
