--- a/src/pages/moviesPage/MoviesPage.module.css
+++ b/src/pages/moviesPage/MoviesPage.module.css
@@ -1,13 +1,55 @@
 .container {
+  height: 100%;
   padding: 80px 20px 20px 20px;
+
   background-image: url(/bgmovies.jfif);
   background-size: cover;
 }
 
+.title {
+  font-size: 48px;
+  font-weight: bold;
+
+  color: #ffffff;
+}
+
 .input {
   width: 300px;
+  height: 30px;
+  margin-top: 20px;
+
+  font-size: 16px;
+
+  border: 5px solid #402000;
+  border-radius: 8px;
 }
 
 .button {
+  width: 100px;
+  height: 40px;
+
+  border: 0;
+  border-radius: 8px;
   margin-left: 10px;
+
+  font-size: 16px;
+  font-weight: 700;
+
+  background-color: #402000;
+  color: #ffffff;
+}
+
+.movies-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  height: 430px;
+  margin-top: 10px;
+  padding: 10px;
+
+  line-height: 1.5;
+
+  border-radius: 20px;
+  background-color: rgba(64, 32, 0, 0.5);
 }
